# crew_ai

./: README.md  ReadM.md
Agents/research_agent/: README.md  pyproject.toml  report.md
Agents/research_agent/src/research_agent/: main.py  main1.py
Agents/research_agent/src/research_agent/crews/research_agent/: agent.py
agent_crew/: README.md  pyproject.toml  report.md
agent_crew/src/agent_crew/: crew.py  main.py
agent_crew/src/agent_crew/config/: tasks.yaml
ai_news_scraper/: README.md  output.md  pyproject.toml
ai_news_scraper/news/: 2024-08-08_news_article.md  2024-10-27_news_article.md  2025-03-09_00-54-16_news_article.md  2025-03-09_01-02-02_news_article.md
ai_news_scraper/src/ai_news_scraper/: crew.py  main.py
ai_news_scraper/src/ai_news_scraper/config/: agents.yaml  tasks.yaml
crewai_supporter/: README.md  pyproject.toml
crewai_supporter/src/crewai_supporter/: crew.py  main.py
crewai_supporter/src/crewai_supporter/config/: agents.yaml  tasks.yaml
flow_deploy/: README.md  poem.txt  pyproject.toml
flow_deploy/src/flow_deploy/: main.py
try_flow/: README.md  poem.txt  pyproject.toml
try_flow/src/try_flow/: main.py
write_article/: README.md  pyproject.toml  report.md
write_article/src/write_article/: crew.py  main.py
write_article/src/write_article/config/: agents.yaml  tasks.yaml
