[project]
name = "crewai_supporter"
version = "0.1.0"
description = "crewai_supporter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools>=0.37.0",
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
support = "crewai_supporter.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
