[project]
name = "flow_deploy"
version = "0.1.0"
description = "flow_deploy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "flow_deploy.main:kickoff"
run_crew = "flow_deploy.main:kickoff"
plot = "flow_deploy.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
