[project]
name = "research_agent"
version = "0.1.0"
description = "research_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "research_agent.main:kickoff"
plot = "research_agent.main:plot"
go = "research_agent.main1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
